PCA and NMF changed

--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -6772,7 +6772,7 @@
     "  $$\n",
     "  d(\\mathbf{x}_i, \\mathbf{x}_j) = \\sum_{k=1}^{n} |x_{ik} - x_{jk}|\n",
     "  $$\n",
-    "- It's also possible to use other distance metrics like Euclidian distance. Since K-medoids uses actuald ata points it's often more flexible for different distance metrics. \n",
+    "- It's also possible to use other distance metrics like Euclidian distance. Since K-medoids uses actual data points it's often more flexible for different distance metrics. \n",
     "\n",
     "#### Advantages\n",
     "- It's more robust to outliers compared to K-means, because actual data points are being used. \n",
@@ -7347,39 +7347,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Principal Component Analysis is an unsupervised learning algorithm technique that is used to examine the interrelations among a set of variables. PCA is also a statistical procedure that uses an orthogonal transformation that converts a set of correlated variables to a set of uncorrelated variables. The main goal is to reduce the dimensionality of a dataset while the most important relationships or patterns are preserved.\n",
+    "Principal Component Analysis (PCA) is an unsupervised learning technique used to analyze relationships between variables. It transforms correlated variables into uncorrelated ones through an orthogonal transformation. The main purpose of PCA is to reduce dataset dimensions while preserving important patterns and relationships.\n",
     "\n",
     "Math formula:\n",
     "\n",
     "​Step 1: standardize\n",
     "\n",
+    "Ensure that all the features are on the same scale. The reason you do this is to make sure certain features don't dominate other features. \n",
+    "\n",
     "Z= (X−μ) / σ\n",
-    "- μ is the mean of independant features: μ = {μ_1, μ_2, ..., μ_m}\n",
-    "- σ is the standard devation of independent features: σ = {σ_1, σ_2, ..., σ_m}\n",
     "\n",
-    "Next we calculate the covariance matrix:\n",
+    "By standardizing the dataset you make sure that each variable has a mean of 0 and a standard deviation of 1. \n",
+    "\n",
+    "Step 2: Find realationships. \n",
+    "\n",
+    "After that you calculate how features vary together using the covariance matrix. This covariance matrix measures the strength of the shared variability between two or more variables, showing how then can change relative to eachother. This matrix is calculated with the following formula:\n",
     "\n",
     "$$\n",
-    "\\Sigma = \\frac{1}{n-1} X^\\top X\n",
+    "\\text{cov}(x_1, x_2) = \\frac{1}{n-1} \\sum_{i=1}^{n} (x_{1i} - \\bar{x}_1)(x_{2i} - \\bar{x}_2)\n",
     "$$\n",
     "\n",
+    "The covariance can be positive, negative or zero:\n",
+    "- It's positive when the x2 also increases when the x1 increases\n",
+    "- It's negative when the x2 decreases when the x1 increases\n",
+    "- It's zero when there's no direct relationship between the variables. \n",
     "\n",
-    "the covariance can be postive, negative or 0:\n",
-    "- When x1 increases so does x2 if the covariance is positive.\n",
-    "- When x1 decreases so does x2 if the covariance is negative.\n",
-    "- When the covariance is 0 there are no direct relations.\n",
-    "​\n",
+    "Step 3: Find the Principal Components.\n",
     "\n",
-    "Then we calculate the eigenvalues and vectors of said matrix:\n",
+    "Then you find the principal components. These principal components are the directions in the graph where the data spreads out the most. THis means the direction with the most variance. These directions are caculated by using the eigenvalues and eigenvectors. Eigenvectors are the directions and the eigenvalues are there corresponding variance.\n",
+    "\n",
+    "For a square matrix A, an eigenvector X (a non-zero vector) and its corresponding eigenvalue λ (a scalar) satisfy the equation:\n",
     "\n",
     "AX = λX\n",
     "\n",
-    "- A is a square nXn matrix\n",
-    "- X is a non-zero vector\n",
-    "- lambda is the eigenvalue of A\n",
-    "- X is the eigenvector of A\n",
+    "Step 4: Choosing amount of principal components and transforming the data. \n",
     "\n",
-    "Lastly we multiply the featuredata with the eigenvectors to get the principal components.\n",
+    "When making the principal components you visualize a cumulative explained variance plot to see how much variance the principal components capture. Usually you keep the first 2 or 3 components or you base it on the amount of variance they capture (minimum around 95%).\n",
+    "\n",
+    "Then you transform the data on these chosen directions to get a simplified and lower dimension.\n",
     "\n",
     "GeeksforGeeks. (2024, September 10). Principal Component Analysis(PCA). GeeksforGeeks. https://www.geeksforgeeks.org/principal-component-analysis-pca/"
    ]
@@ -8299,20 +8304,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By creating a user_defined amount of features NMF decomposes multivariation data and each one of those features is a linear combination of the original attribute set where the coefficients of these combinations are non-negative. A data matrix that is decomposed in two lower rank matrixes is equal to those lower rank matrixes multiplied by each other, so A decomposed in B and C is equal to B x C. To modify the initial values of B and C so that the product approaches A NMF uses an iterative procedure and the procedure ends when the specified number of iterations is reached or when the approximation error converges. When applying the model to the data the NMF model maps it into a new set of attributes that the model discovered.\n",
+    "Non-Negative Matrix Factorization (NMF) is a method for decomposing a large dataset into smaller, meaningful components while keeping all values non-negative. This makes it easier to extract useful features, analyze, and process the data. This method assumes that data consists of meaningful parts that add up to form the whole. \n",
     "\n",
-    "Non-negative Matrix Factorization is a method used to constrain the matrixes to be non-negative. NMF can be used to factorize one matrix into two like so:\n",
+    "It decomposes a matrix into two smaller matrixes like the formula shows below:\n",
     "\n",
     "$$\n",
     "A_{m \\times n} = W_{m \\times k} H_{k \\times n}\n",
     "$$\n",
     "\n",
     "Where:\n",
-    "- A is the original input matrix. (linear combination of W and H)\n",
-    "- W is the feature matrix.\n",
-    "- H is the coefficient Matrix.\n",
-    "- k is the low rank approximation of A (k <= min(m, n))\n",
-    "- m, x, n and k represent the dimensions of the matrix.\n",
+    "- A = the original matrix input, which is a linear combination between 'W' and 'H'.\n",
+    "- W =  the feature matrix, which are the basis components\n",
+    "- H = the coefficient matrix, which are the weights that are associated with 'W'\n",
+    "- k = the rank, which is the dimensionality of the reduced representation.\n",
+    "\n",
+    "NMF decomposes a data matrix 'A' into two smaller matrixes 'W' and 'H'. This is done by using an iterative optimization process:\n",
+    "\n",
+    "First you start with random non-negative values for the smaller matrixes 'W' and 'H'. \n",
+    "\n",
+    "After that you modifiy 'W' and 'H' to minimize the difference between the original matrix 'A' and the two new (smaller) matrixes 'W' x 'W'. \n",
+    "\n",
+    "You keep iterating until the recontruction error doesn't change anymore or a predefined number of iterations is used. \n",
+    "\n",
     "\n",
     "Source:\n",
     "GeeksforGeeks. (2023, March 2). NonNegative Matrix Factorization. GeeksforGeeks. https://www.geeksforgeeks.org/non-negative-matrix-factorization/"
