--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -2556,21 +2556,21 @@
     "**How MFCCs Are Constructed:**\n",
     "\n",
     "1. **Frame the Signal:**\n",
-    "    - Sound changes over time, so we split it into small overlapping frames. \n",
-    "    - A smoothing function (Hamming window) is applied to each chunk to avoid sharp edges.\n",
+    "    - Sound changes over a period of time, so we split it into small overlapping frames. \n",
+    "    - A smoothing function (Hamming window) is applied to each frame to avoid sharp edges in the sound. This is done by the following formula:\n",
     "     $$\n",
     "     w(n) = 0.54 - 0.46 \\cdot \\cos\\left(\\frac{2\\pi n}{N-1}\\right)\n",
     "     $$\n",
     "\n",
     "2. **Convert to the Frequency Domain (FFT):**\n",
-    "    - Apply the Fast Fourier Transform (FFT) to each frame to break it into its frequency components.\n",
+    "    - Then you apply the Fast Fourier Transform (FFT) to each frame to break it into its frequency components.\n",
     "     $$\n",
     "     X(k) = \\sum_{n=0}^{N-1} x(n) \\cdot e^{-j \\cdot 2\\pi \\cdot k \\cdot n / N}\n",
     "     $$\n",
     "    - This gives the magnitude spectrum, showing how much energy exists at each frequency.\n",
     "\n",
     "3. **Apply the Mel Scale:**\n",
-    "    - The human ear is more sensitive to changes in low frequencies than high frequencies. The Mel Scale warps the frequency axix to model the perception: \n",
+    "    - The human ear is more sensitive to changes in low frequencies than high frequencies. The Mel Scale warps the frequency axis to model the perception: \n",
     "     $$\n",
     "     m(f) = 2595 \\cdot \\log_{10}(1 + \\frac{f}{700})\n",
     "     $$\n",
@@ -2590,12 +2590,13 @@
     "     $$\n",
     "\n",
     "6. **Apply the Discrete Cosine Transform (DCT):**\n",
-    "    - Lastly the DCT is applied to the mel energies. This decorrelates and compresses the features, while learning only the most important efficiencies: \n",
+    "    - Lastly the DCT is applied to the mel energies. This decorrelates and compresses the features, while it only learns the most important efficiencies:\n",
     "\n",
     "     $$\n",
     "     C_n = \\sum_{m=0}^{M-1} \\log(E_m) \\cdot \\cos\\left(\\frac{\\pi n (2m+1)}{2M}\\right)\n",
     "     $$\n",
     "    - The result is the MFCCs, with the first few coefficients holding most useful information.\n",
+    "    - \n",
     "Valerio Velardo - The Sound of AI. (2020, October 5). Mel-Frequency cepstral coefficients explained easily [Video]. YouTube. https://www.youtube.com/watch?v=4_SH2nfbQZ8\n",
     "\n",
     "GeeksforGeeks. (2024b, juni 26). Melfrequency Cepstral Coefficients (MFCC) for Speech Recognition. GeeksforGeeks. https://www.geeksforgeeks.org/mel-frequency-cepstral-coefficients-mfcc-for-speech-recognition/?ref=gcse_outind\n",
@@ -2614,19 +2615,19 @@
     "**How MFCC Deltas Are Constructed:**\n",
     "\n",
     "1. **Input Data:**\n",
-    "   - Start with the matrix of MFCCs, where each row represents a specific coefficient, and each column corresponds to a time frame.\n",
+    "   - Start with the matrix of MFCCs. In this matrix represents each row a coefficient and each column represetns to a time frame. \n",
     "\n",
     "2. **Compute Temporal Differences:**\n",
-    "   - Deltas are calculated with a sliding window as following:  \n",
+    "   - Deltas are calculated with a sliding window with the following formula:  \n",
     "     $$\n",
     "     \\Delta C(t) = \\frac{\\sum_{\\tau=-T}^T \\tau \\cdot C(t+\\tau)}{\\sum_{\\tau=-T}^T \\tau^2}\n",
     "     $$\n",
     "     - C(t): MFCC coefficient at time t.\n",
-    "     - T: Size of the time window for delta computation.\n",
+    "     - T: Size of the time window for delta calculation.\n",
     "   - This formula averages neighboring frame differences to highlight changes and reduce noise.\n",
     "\n",
     "3. **Smoothing and Noise Reduction:**\n",
-    "   - The size of the sliding window (T) determines the smoothness of the delta values:\n",
+    "   - The size of the sliding window (T) determines how smooth the delta values are. \n",
     "     - A small T captures rapid changes but could be noisy. \n",
     "     - Large T smooths noise but may miss subtle changes.\n",
     "\n",
@@ -2695,7 +2696,7 @@
     "     - S(f): Magnitude of the signal at each frequency f.\n",
     "\n",
     "2. **Cumulative Energy Calculation:**\n",
-    "   - Calculate the cumulative sum of spectral energy up to each frequency f:\n",
+    "   - Calculate the cumulative sum of spectral energy for each different frequency 'f':\n",
     "     $$\n",
     "     E_{\\text{cumulative}}(f) = \\sum_{i=0}^{f} S(f_i)\n",
     "     $$\n",
@@ -2712,7 +2713,7 @@
     "      E_{\\text{total}} = \\sum_{i=0}^{F} S(f_i) \n",
     "     $$ \n",
     "    - the total energy in the spectrum.\n",
-    "   - Mathematically, rolloff shows:\n",
+    "   - Mathematically, rolloff shows the following:\n",
     "     $$\n",
     "     f_{\\text{rolloff}} = \\min \\{ f \\, | \\, E_{\\text{cumulative}}(f) \\geq p \\cdot E_{\\text{total}} \\}\n",
     "     $$\n",
@@ -2787,7 +2788,7 @@
     "   - The result is expressed in decibels (dB) to align with the logarithmic nature of human hearing.\n",
     "\n",
     "4. **Aggregate Across Time:**\n",
-    "   - Compute the mean and variance of spectral contrast over time to summrize the track's overzall tonal texture. \n",
+    "   - Calculate the mean and variance of spectral contrast over time to summrize the track's overall tonal texture. \n",
     "\n",
     "librosa.feature.spectral_contrast — librosa 0.11.0rc1 documentation. (z.d.). https://librosa.org/doc/main/generated/librosa.feature.spectral_contrast.html\n",
     "\n",
@@ -2829,7 +2830,7 @@
     "       High variance indicates a signal with sharp fluctuations, while low variance suggests smooth dynamics.\n",
     "\n",
     "3. **Measure Dynamics Over Time:**\n",
-    "   - Analyse how quickly amplitude rises and falls to understand the temporal structure of the signal. \n",
+    "   - You can analyze how quickly amplitude rises and falls. This gives an understanding about how the temporal structure of the sound.  \n",
     "\n",
     "4. **Compute Energy:**\n",
     "   - The total energy gives insight into the loudness:\n",
@@ -2856,13 +2857,13 @@
     "   - Find the spectral centroid C, the 'center' of the spectrum.\n",
     "\n",
     "2. **Deviation Around the Centroid:**\n",
-    "   - Spectral Bandwidth is the weighted standard deviation of frequencies around the spectral centroid. Mathematically, it is defined as:\n",
+    "   - Spectral bandwith is the weighted standard deviation of frequencies around the spectral centroid. The mathematical formula that's being used is the following: \n",
     "     $$\n",
     "     BW = \\sqrt{\\frac{\\sum_{f} S(f) (f - C)^2}{\\sum_{f} S(f)}}\n",
     "     $$\n",
     "     - S(f): Magnitude of the spectrum at frequency f.\n",
-    "     - C: Spectral centroid, or the weighted mean frequency.\n",
-    "     - f - C: Distance of each frequency from the centroid.\n",
+    "     - C: Spectral centroid\n",
+    "     - f - C: the distance of each frequency from the spectral centroid\n",
     "     - The weights S(f) ensure that frequencies with higher energy have more impact on the bandwidth calculation. \n",
     "\n",
     "3. **Physical Interpretation:**\n",
@@ -2939,7 +2940,7 @@
     "   - Amplitude values are taken as absolute values y[n] most of the times to ensure that extreme loudness are measured irrespective of polarity. \n",
     "\n",
     "2. **Smoothing Over Time**:\n",
-    "   - Momentary values can cause issues, because it could be misleading due to noise or outliers. Because of this the signal is usually analyzed in shorter timeframes.\n",
+    "   - Momentary values can cause issues, because it could be misleading due to noise or outliers. To avoid these issues the signal is usually analyzed in shorter timeframes. \n",
     "   - The dynamic range is calculated for each frame. A summary statistic (mean or median) is used to represent the overall dynamic range of a song. \n",
     "\n",
     "3. **Relation to Perception**:\n",
@@ -2982,7 +2983,7 @@
     "f: Frequency\n",
     "\n",
     "\n",
-    "Onset Detection Function (ODF): Identifies sudden rises in energy, focusing on changes in the amplitude. The ODF is typically calculated the foll\n",
+    "Onset Detection Function (ODF): Identifies sudden rises in energy, focusing on changes in the amplitude. The ODF is typically calculated the following:\n",
     "\n",
     "$$\n",
     "O(t) = \\frac{d}{dt} \\left| X(t, f) \\right|^2\n",
@@ -2998,7 +2999,7 @@
     "\n",
     "Peaks in R(τ) correspond to the lag time between beats.\n",
     "\n",
-    "BPM Calculation:The dominant lag  (τbeat) is converted to BPM:\n",
+    "BPM Calculation: The dominant lag (τbeat) is converted to BPM:\n",
     "$$\n",
     "\\text{BPM} = \\frac{60}{\\tau_{\\text{beat}}}\n",
     "$$\n",
@@ -3036,42 +3037,6 @@
     "GeeksforGeeks. (2024b, maart 19). AutoCorrelation. GeeksforGeeks. https://www.geeksforgeeks.org/autocorrelation/\n",
     "\n",
     "Rogers, & Kara. (z.d.). What’s the Difference Between Tempo and Rhythm? Encyclopedia Britannica. https://www.britannica.com/story/whats-the-difference-between-tempo-and-rhythm\n",
-    "\n",
-    "--- \n",
-    "#### **Rhythmic Regularity**\n",
-    "\n",
-    "Variability in inter-beat intervals (IBI) measures the consistency of a rhythm by analyzing  the time gap between beats in a audio signal. A more consistent IBI is often found in genres like dance music, since these songs rely on a consistent beat for easy dance movements. An irregular IBI suggest a more complext rhythm, which are more common in genres with non-repetetive structures. \n",
-    "\n",
-    "\n",
-    "**Inter-Beat Interval:**\n",
-    "The IBI is calculated as the time difference between consecutive detected beats. For two consecutive beats b1 and b2 at times t1 and t2, the IBI is:\n",
-    "\n",
-    "$$\n",
-    "IBI = t_2 - t_1\n",
-    "$$\n",
-    "\n",
-    "**Mean IBI:**\n",
-    "The mean IBI over a window or segment is calculated as:\n",
-    "\n",
-    "$$\n",
-    "\\mu_{\\text{IBI}} = \\frac{1}{N-1} \\sum_{i=2}^{N} (t_i - t_{i-1})\n",
-    "$$\n",
-    "\n",
-    "Where:\n",
-    "\n",
-    "N is the total number of beats detected.\n",
-    "\n",
-    "ti is the timestamp of the i-th beat.\n",
-    "\n",
-    "IBI Variability (Standard Deviation):\n",
-    "The variability of the IBIs is typically measured by the standard deviation, which captures the rhythmic consistency:\n",
-    "\n",
-    "$$\n",
-    "\\sigma_{\\text{IBI}} = \\sqrt{\\frac{1}{N-1} \\sum_{i=2}^{N} \\left( (t_i - t_{i-1}) - \\mu_{\\text{IBI}} \\right)^2}\n",
-    "$$\n",
-    "\n",
-    "A higher value of σIBI indicates irregular rhythms, while a lower value indicates regular rhythms.\n",
-    "\n",
     "\n",
     "---\n",
     "\n",
@@ -3126,6 +3091,8 @@
     "$$\n",
     "T = [T_1, T_2, T_3, T_4]\n",
     "$$\n",
+    "\n",
+    "Using Tonnetz Tone mesh to understand jazz harmony. (z.d.). Jazz-Library. https://jazz-library.com/articles/tonnetz/\n",
     "\n",
     "---\n",
     "\n",
