--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -2599,6 +2599,8 @@
     "    - \n",
     "Valerio Velardo - The Sound of AI. (2020, October 5). Mel-Frequency cepstral coefficients explained easily [Video]. YouTube. https://www.youtube.com/watch?v=4_SH2nfbQZ8\n",
     "\n",
+    "Mel Spectrogram. (z.d.). Notes By Lex. https://notesbylex.com/mel-spectrogram\n",
+    "\n",
     "GeeksforGeeks. (2024b, juni 26). Melfrequency Cepstral Coefficients (MFCC) for Speech Recognition. GeeksforGeeks. https://www.geeksforgeeks.org/mel-frequency-cepstral-coefficients-mfcc-for-speech-recognition/?ref=gcse_outind\n",
     "\n",
     "Deruty, E. (2022, December 15). Intuitive understanding of MFCCs - Emmanuel Deruty - Medium. Medium. https://medium.com/@derutycsl/intuitive-understanding-of-mfccs-836d36a1f779\n",
@@ -2637,9 +2639,9 @@
     "\n",
     "#### **Spectral Centroid**\n",
     "\n",
-    "The spectral centroid represents the 'center of the mass' of a sounds frequency spectrum. This gives an insight into the trimbral brightness and other genre related characteristics. The math relies on a weighted averae that highlights the dominant frequency regions in a spectrum.\n",
+    "The spectral centroid represents the 'center of the mass' of a sounds frequency spectrum. This gives an insight into the trimbral brightness and other genre related characteristics. The math relies on a weighted average that highlights the dominant frequency regions in a spectrum.\n",
     "\n",
-    "A high centroid corresponds to a bright, sharp sound (like electric guitars), while a low centroid reflects a more darker, mellow tone (like bass). This feature helps to distinct different genres based on the centroid by distinguishing instruments and production styles bases on their specific brightness. \n",
+    "A high centroid corresponds to a bright, sharp sound (like electric guitars), while a low centroid reflects a more darker, mellow tone (like bass heav sounds). This feature helps to distinct different genres based on the centroid by distinguishing instruments and production styles bases on their specific brightness. \n",
     "\n",
     "**How Spectral Centroids Are Constructed:**\n",
     "\n",
