--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -2639,9 +2639,8 @@
     "\n",
     "#### **Spectral Centroid**\n",
     "\n",
+    "The spectral centroid represents the center of the mass of a sound's frequency spectrum. It gives an insight into the timbral brightness and other genre related characteristics. The math relies on a weighted average that highlights the dominant frequency regions in the spectrum of an audio signal. A high centroid suggests a bright, sharp sound like electric guitars, while a low centroid suggest the exact opposite, a more darker, mellow tone like bass heavy sounds. This feature helps to distinct different genres based on the centroid by distinguishing instruments and production styles based on their specific brightness. \n",
     "The spectral centroid represents the 'center of the mass' of a sounds frequency spectrum. This gives an insight into the trimbral brightness and other genre related characteristics. The math relies on a weighted average that highlights the dominant frequency regions in a spectrum.\n",
-    "\n",
-    "A high centroid corresponds to a bright, sharp sound (like electric guitars), while a low centroid reflects a more darker, mellow tone (like bass heav sounds). This feature helps to distinct different genres based on the centroid by distinguishing instruments and production styles bases on their specific brightness. \n",
     "\n",
     "**How Spectral Centroids Are Constructed:**\n",
     "\n",
@@ -2689,7 +2688,8 @@
     "\n",
     "#### **Spectral Roll-Off**\n",
     "\n",
-    "Spectral roll-off shows how the energy of a song is spread across frequencies by finding the cut-off frequency in audio signals. It measures the frequency below which a certain percentage of total spectral energy is concentraded, helping it to distinguish between sounds with a high and low frequency energy. Genres like rock have a more high frequency, due to its higher roll-off value, while smoother genres like jazz or classical have lower ones. It also analyzes instrumental texture, since instruments like electri guitars raise the roll-off point. Spectral roll off owrks alongside the other features which are described above to give a better insight into how energy is distributed across the frequency spectrum. \n",
+    "The spectral roll off shows how the energy of a song is spread across different frequencies by finding the cut-off frequency in audio signals. It measures the frequency below which a certain percentage of the total spectral energy is concentrated. Genres like rock have a higher frequency due to it's higher roll of value, while smoother genres like jazz or classical music have lower values. Spectral roll-off also analyzes the instrumental textrure in a song, since instruments like electric guitars raise the roll-off point. This feature gives alongside other features a better insigh into how the energy is distributed across the frequency spectrum of a song. \n",
+    "\n",
     "\n",
     "**How Spectral Roll-Off Is Constructed:**\n",
     "\n",
@@ -2734,7 +2734,8 @@
     "\n",
     "**Spectral Flux**\n",
     "\n",
-    "Spectral flux measures how much a track's sound changes over time by analyzing the rate of change in the power spectrum across different frames. A high flux indicates fast spectral changes like sudden beats, which are common in hip-hop, while low values suggest a more smooth, steady transition, which are typical for classical music. This feature helps differentiate genres based on the dynamic textrues in audio files. \n",
+    "Spectyra flux measures how much a track's sound changes over time by analyzing the rate of change in the power spectrum across different frames. It compares the power spectrum of one frame against the power spectrum of the previous frame. A high flux suggests fast spectral changes, like sudden beats which are common in hip hop, while low values suggest a more smooth and steady transition, which are typical for classical music. It helps differentiate genres based on the dynamic textures in songs. \n",
+    "\n",
     "\n",
     "**How Spectral Flux Is Constructed:**\n",
     "\n",
@@ -2763,22 +2764,24 @@
     "\n",
     "SpectralFlux. (z.d.). https://nl.mathworks.com/help/audio/ref/spectralflux.html\n",
     "\n",
+    "Wikipedia contributors. (2022, 27 januari). Spectral flux. Wikipedia. https://en.wikipedia.org/wiki/Spectral_flux\n",
+    "\n",
     "---\n",
     "\n",
     "#### **Spectral Contrast**\n",
     "\n",
-    "Spectral contrast measures the difference in energy between different peaks and lows across the frequency of an audio file to hihglight the most prominent and least noticeable parts of an audio file. It shows how the energy levels vary across the spectrum, giving insights in the tonal texture and dynamic range of a sound. A high spectral contract, which is common for jazz, indicates a wide range within the frequency. A low spectral contrastt suggests that the spectral energy is distributed more evenly where different tones create a more smoother tonal texture. Spectral contrast is especially useful to differentiate between genres with similar timbres, but with different dynamic or harmonic structures. \n",
+    "Spectral contrast measures the difference in energy between different highs and lows across the frequency of an audio signal and highlights the most prominent and least noticable parts of an audio signal. It gives insigh in how the energy levels vary across the spectrum and suggest how the tonal texture and dynamic range of a sound look. A high spectral contrast, which is common for jazz, indicates a wide range within the frequency. A low spectral contrast suggests the exact opposite, which means the spectral energy is distributed more evenlop across the spectrum and the tones create a more smooth tonal texture. It's especially useful to differentiate between genres with similar timbres, but a different dynamic or harmonic structure. \n",
     "\n",
     "**How Spectral Contrast Is Constructed:**\n",
     "\n",
     "1. **Divide the Spectrum Into Bands:**\n",
-    "   - The frequency spectrum is split into multiple logarithmically spaced sub-bands (e.g., low, mid, and high frequencies), to match human hearing.\n",
-    "   - Use the Short-Time Fourier Transform (STFT) to obtain the spectrum, S(t, f), where t  is time, and f is frequency.\n",
+    "   - You split the frequency spectrum into multiple logaritmically spaced sub bands to match sounds like humans perceive them.\n",
+    "   - Then use the Short-Time Fourier Transform to obtain the corresponding spectrum. \n",
     "\n",
     "2. **Identify Peaks and Valleys:**\n",
     "   - For each sub-band at a given time frame t:\n",
     "     - Peaks: The highest energy values (representing dominant harmonics or tonal components).\n",
-    "     - Valleys:The lowest energy values (representing quieter or background noise components).\n",
+    "     - Valleys: The lowest energy values (representing quieter or background noise components).\n",
     "\n",
     "3. **Compute Contrast:**\n",
     "   - For each sub-band the ratio between the peak and valley energy levels is calculated.\n",
@@ -2801,7 +2804,8 @@
     "\n",
     "#### **Envelope Features**\n",
     "\n",
-    "Envelope features capture the amplitude dynamics and temporal structure of music. It helps to distinguish genres bases on the intensity of the rythm, usage of instruments and variations in loudness. They describe the overall shape of an audio signal's amplitude, while ignoring rapid oscillations. It highlighs differences between sustained sounds (like violins) and percussive sounds (like drums). This differentiation makes these envelop features useful for genre classification. Genres with a high envelop variance are common for hip-hop and EDM, while smoother envelopes with a lower variance and steadier loudness levels are more common for classical music songs.\n",
+    "Envelop features capsture the amplitude dynamics and temporal strucutre of music. This helps to distinguish genres based on the intensity of the rythm, usage of different instruments and variations in loudness. They describe the overall shape of an audio signal's amplitude, but ignore rapid oscillations. It highlights difference between sustained sounds like violines and percussive sounds like drums. By looking ath these differences it's easier to classificate differentes. Genres with a high envelop variance are more common for hip hop and EDM, while other smoother evelopes with a lower variance and steadeier loudness are more common for classical songs. \n",
+    "\n",
     "\n",
     "**How Envelope Features Are Constructed:**\n",
     "\n",
@@ -2849,7 +2853,8 @@
     "\n",
     "#### **Spectral Bandwidth**\n",
     "\n",
-    "Spectral bandwith captures the range of frequencies in a signal and provides insight into the energy distribution of music. It measures how spread out the frequency is around the spectral centroid. A wider bandwidth indicates the presence of high frequency components while a narrow bandwidth suggests more lower frequencies. This makes it a useful feature for genre differentiation, since energetic genres like rock and metal have wide bandwidths due to it's characteristics, while classic music has narrower bandwidths emphasizing smoother, which are lower frequency sounds. \n",
+    "The spectral bandwith capures the range of frequencies in a signal and provides insight into the energy distribution of music. It measures how spread out the frequency is around the spectral centroid (see explanation above). A larger bandwith suggests a wider range of frequencies, while a smaller bandwith indicates a narrower range. This makes it a useful feature to differentiate genres, since energetic genres like rock and metal have wider bandwidths due to it's characteristics, while classical music has a narrower bandwith which means smoother and lower frequency sounds. \n",
+    "\n",
     "\n",
     "\n",
     "**How Spectral Bandwidth Is Constructed:**\n",
@@ -2870,7 +2875,7 @@
     "\n",
     "3. **Physical Interpretation:**\n",
     "   - Narrow bandwidth: most energy is near the centroid\n",
-    "   - Wide bandwidth: energy is spead out. \n",
+    "   - Wide bandwidth: energy is spread out. \n",
     "\n",
     "4. **Descriptive Statistics:**\n",
     "   - The mean and variance of the spectral bandwidth over time are typically calculated to capture its behavior across an audio clip:\n",
@@ -2885,7 +2890,8 @@
     "\n",
     "#### **Time-Domain Features**\n",
     "\n",
-    "Time-domain freatures like RMS energy, amplitude mean and amplitude variance are important aspects of loudness and dynamics in music. Using these features you're able to differentiate different genres based on intensity. RMS mainly focuses on the overall loudness, while the amplitude mean reflects the average signal streng and amplitude mean shows the change in intensity. Genres with high energies like rock or metal have a high RMS energy and mean amplitude most of the time, while classical music has a lower RMS energy, but a higher mean variance, due to it's changes between quiet and loud sections. \n",
+    "Time Domain features like RMS energy, amplitude mean and amplitude variance are really important aspects of loudness and dynamics in mysuc. These features make you able to differentiate different genres bases on the intensity of a song. RMS mainly focusses on the overall loudness, while the amplitude mean reflects the average signal strength and the amplitude variance shows the change in intensity. High energy genres like rock or metal have a high RMS energy and mean amplitude most of the time. Classical has a lower RMS energy, but a higher mean variance, due to it's changes between  quiet and loud sections in the songs. \n",
+    "\n",
     "\n",
     "**How These Features Are Constructed:**\n",
     "\n",
@@ -2914,7 +2920,7 @@
     "     - A high variance indicates that the signal's amplitude fluctuates from extreme low to extreme high values, while a low variance suggests more consistent intensity.\n",
     "\n",
     "3. **Temporal Considerations:**\n",
-    "   - These metrics are typically calculated over short frames of the signal and then averaged across the entire clip to capture overall trends\n",
+    "   - These metrics are typically calculated over short frames of the signal and then averaged across the entire clip to capture overall trends. \n",
     "   - Analyzing variations in these features over time can reveal dynamic structures, such as rhythmic accents.\n",
     "\n",
     "Root mean square (RMS) and overall level. (n.d.). https://community.sw.siemens.com/s/article/root-mean-square-rms-and-overall-level\n",
@@ -2955,6 +2961,8 @@
     "Giri. (2023, November 22). Dynamic range in audio: what it is, how it works, and why it matters. Audio AI | T | P. https://audiointerfacing.com/dynamic-range-in-audio/\n",
     "\n",
     "Wen, B., Wang, G. I., Dean, I., & Delgutte, B. (2009). Dynamic range adaptation to sound level statistics in the auditory nerve. Journal of Neuroscience, 29(44), 13797–13808. https://doi.org/10.1523/jneurosci.5610-08.2009\n",
+    "\n",
+    "Wikipedia contributors. (2025, 12 februari). Dynamic range. Wikipedia. https://en.wikipedia.org/wiki/Dynamic_range\n",
     "\n",
     "---\n",
     "\n",
@@ -6679,7 +6687,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This plot demonstrates that the inertia decreases sharply between 1 and 3 clusters, indicating a significant improvement in clustering quality as the number of clusters increases. However, after 3 clusters, the rate of decrease in inertia slows down considerably, suggesting diminishing returns in adding more clusters. This change in slope, often referred to as the \"elbow\" point, is where adding additional clusters no longer results in a substantial reduction in inertia. Based on this observation, we have determined that the optimal number of clusters for the unlabeled dataset is 3, as it balances simplicity and clustering effectiveness."
+    "This plot demonstrates that the inertia decreases sharply between 1 and 3 clusters, indicating a significant improvement in clustering quality as the number of clusters increases. However, after 3 clusters, the rate of decrease in inertia slows down considerably, suggesting diminishing returns in adding more clusters. This change in slope, often referred to as the \"elbow\" point, is where adding additional clusters no longer results in a substantial reduction in inertia. Based on this observation, we have determined that the optimal number of clusters for the unlabeled dataset is 3, as it balances simplicity and clustering effectiveness.\n",
+    "\n",
+    "Mahendru, K. (2025, 3 januari). How to Determine the Optimal K for K-Means? - Analytics Vidhya - Medium. Medium. https://medium.com/analytics-vidhya/how-to-determine-the-optimal-k-for-k-means-708505d204eb"
    ]
   },
   {
